# GeminiCLI

./: .mcp.json  ARCHITECTURE.md  AgentSwarm.psm1  Execute-GrandPlan.ps1  GEMINI.md  Generate-MCP-Config.ps1  README.md  Start-StatusMonitor.ps1  Test-Dijkstra.ps1  _launcher.ps1  gemini-mcp-config.json  gemini.bat  package-lock.json  package.json  repomix-output.xml
.gemini/: settings.json  settings.local.json  statusline.cjs
GeminiGUI/: 00_KEYBOARD_SHORTCUTS_START_HERE.md  00_START_HERE.md  BUTTON_TEST_CASES.md  BUTTON_TEST_SUMMARY.md  COMPLETION_REPORT.md  COMPLETION_REPORT.txt  DELIVERABLES.md  DELIVERABLES.txt  DELIVERY_SUMMARY.txt  ERRORBOUNDARY_INDEX.md  ERRORBOUNDARY_QUICK_INTEGRATION.md  ERRORBOUNDARY_SETUP.md  ERRORBOUNDARY_SUMMARY.md  ERRORBOUNDARY_VISUAL_GUIDE.md  EXPORT_SETUP.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPORT_EXAMPLES.md  INDEX_EXPORTS_SUMMARY.txt  INTEGRATION_GUIDE.md  KEYBOARD_SHORTCUTS_EXAMPLES.tsx  KEYBOARD_SHORTCUTS_IMPLEMENTATION.md  KEYBOARD_SHORTCUTS_QUICK_REFERENCE.md  OPTIMIZATION_QUICK_REFERENCE.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.txt  README.md  README_ERRORBOUNDARY.md  README_OPTIMIZATION.md  README_TESTING.md  README_TOAST_SYSTEM.md  SELECTORS_QUICK_REF.md  SELECTORS_README.md  SELECTORS_STRUCTURE.txt  SELECTOR_EXAMPLES.md  SELECTOR_GUIDE.md  SKELETON_COMPONENTS_SUMMARY.md  SKELETON_QUICK_REFERENCE.md  START_HERE.md  START_HERE.txt  (+27 more)
GeminiGUI/src-tauri/: Cargo.toml
GeminiGUI/src-tauri/src/: lib.rs
scripts/: cli-utils.mjs  doctor.mjs  i18n.mjs  statusline.mjs
src/: config.js  env.js  server.js  (+1 more)
(+205 files in other folders)
